<resources>
    <string name="app_name">Music Saver</string>
    <string name="song_name">Song name</string>
    <string name="song_album">Song Album</string>
    <string name="song_duration">Song Duration</string>
    <string name="add_button">Add</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>

    <string name="settingsKop">Settings</string>
    <string name="settingText">Choose your languageu</string>
    <string name="button_english">English</string>
    <string name="button_dutch">Dutch</string>

    <string name="taalTextV">Language:</string>
    <string name="colorMode">Color mode:</string>
    <string name="fontMode">Font:</string>

    <string name="fontNormal">Normal</string>
    <string name="fontBold">Bold</string>
    <string name="colorLight">Light</string>
    <string name="colorDark">Dark</string>
    <string name="languageEn">English</string>
    <string name="languageNe">Dutch</string>


    <string name="textArtist">Artist</string>
    <string name="textDuration">Duration</string>
    <string name="textAlbum">Album</string>

    <string name="nb_add">Add Song</string>
    <string name="nb_Home">Home</string>
    <string name="nb_Settings">Settings</string>
    <string name="nb_Misc">Misc</string>

    <string name="floatingButDesc">floating edit</string>

    <string name="discId">Id</string>
    <string name="discSong">Song</string>
    <string name="discAlbum">Album</string>
    <string name="discDuration">Duration</string>

    <string name="englishButton">English</string>
    <string name="dutchButton">Dutch</string>

    <string name="listTitle">Your Songs to Listen to!</string>
    <string name="detailPageInfo">Information about the Song!</string>
    <string name="select_song">Select a Number:</string>

    <string name="name_label">Select Song:</string>
    <string name="album_label">Select Album:</string>
    <string name="duration_song">Select Duration:</string>

    <string name="editButton">Edit</string>
    <string name="snackbarNoData">Not Song Selected</string>

    <string name="name_selected">Name: </string>
    <string name="album_selected">Album: </string>
    <string name="duration_selected">Duration: </string>

    <string name="toolbarTitleAdd">Add New Song</string>
    <string name="back_button_description">Back button</string>

    back_button_description
</resources>