<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rowLayoutToUpdate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:background="?attr/background_color">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <TextView
                    android:id="@+id/songIdRV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="?attr/specialText"
                    android:textSize="27sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="12dp" />

                <TextView
                    android:id="@+id/songNameRV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="84dp"
                    android:text="The weekend"
                    app:layout_constraintStart_toEndOf="@+id/songIdRV"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/songAlbumRV"
                    android:layout_width="95dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="4dp"
                    android:text="Don't die today"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/songNameRV"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.292"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/songDurationRV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="243"
                    app:layout_constraintEnd_toEndOf="@+id/songNameRV"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/songIdRV"
                    app:layout_constraintTop_toBottomOf="@+id/songNameRV"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/textArtist"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/songNameRV"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/songIdRV"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.094"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textDuration"
                    app:layout_constraintEnd_toStartOf="@+id/songDurationRV"
                    app:layout_constraintHorizontal_bias="0.946"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/songNameRV"
                    android:textColor="?attr/text_color"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textAlbum"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/songAlbumRV"
                    app:layout_constraintHorizontal_bias="0.77"
                    app:layout_constraintStart_toEndOf="@+id/songNameRV"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.301"
                    android:textColor="?attr/text_color"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>